--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.2",
+    "@types/react-responsive": "^8.0.7",
     "firebase": "^10.5.2",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-kakao-maps-sdk": "^1.1.23"
+    "react-kakao-maps-sdk": "^1.1.23",
+    "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
