--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
     "@types/react-modal": "^3.16.2",
     "@types/react-responsive": "^8.0.7",
     "firebase": "^10.5.2",
@@ -18,7 +21,8 @@
     "react-icons": "^4.11.0",
     "react-kakao-maps-sdk": "^1.1.23",
     "react-modal": "^3.16.1",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20",
